--- a/bountifulfoods/index.html
+++ b/bountifulfoods/index.html
@@ -70,6 +70,18 @@
                     </div>
                 </section>
             </div>
+            <section class="fruits-images">
+                <picture class="cucumber">
+                    <img src="images/placeholder.png" alt="slice of cucumber" data-src="images/cucumber.jpg">
+                </picture>
+                <picture class="orange">
+                    <img src="images/placeholder.png" alt="orange slice image" data-src="images/orange.jpg">
+                </picture>
+                <picture class="banana">
+                    <img src="images/placeholder.png" alt="banana slice image" data-src="images/banana.jpg">
+                </picture>
+            </section>
+
             <div class="contact-drink-grid">
                 <div class="contact-us-info">
                     <h2>Contact Details </h2>
@@ -79,7 +91,7 @@
                     <p>Phone: +234- 9133-9900</p>
                 </div>
                 <div class="information-card">
-                    <h2 id="mixed-drinks-amnt">Amount ordered goes here</h2>
+                    <h2 id="mixed-drinks-amnt">Amount ordereds</h2>
 
                     <a href="fresh.html" target="blank" class="make-drink">Make a Drink!</a>
                 </div>
